syntax = "proto3";

import "google/protobuf/struct.proto";

option java_package = "com.whylogs.core.message";
option java_outer_classname = "Messages";
option java_multiple_files = true;

message DataType {
  enum Type {
    UNKNOWN = 0;
    NULL = 1;
    FRACTIONAL = 2;
    INTEGRAL = 3;
    BOOLEAN = 4;
    STRING = 5;
  }

  Type type = 1;
}

message HllSketchMessage {
  bytes sketch = 1;
  int32 lg_k = 2;
}

message FrequentItemsSketchMessage {
  bytes sketch = 1;
  int32 lg_max_k = 2;
}

message KllSketchMessage {
  bytes sketch = 1;
  int32 k = 2 [deprecated = true];
  double mean = 3;
  double m2 = 4;
}

message TrackerMessage {
  oneof value {
    int64 n = 1;
    double d = 2;
    bytes serialized_bytes = 3;
    FrequentItemsSketchMessage frequent_items = 4;
    HllSketchMessage cardinality_tracker = 5;
    KllSketchMessage histogram = 6;

    PluginMessage custom = 15;
  }
}

message PluginType {
  enum Language {
    PYTHON = 0;
    JAVA = 1;
  }
  string plugin_class_name = 1;
  Language language = 2;
}

message PluginMessage {
  string name = 1;
  repeated PluginType plugin_types = 2; // The language and corresponding classname that implements this plugin.
  oneof item {
    google.protobuf.Struct params = 3;
    bytes serialized_bytes = 4;
  }
}

message ColumnMessage {
  map<string, TrackerMessage> trackers = 1;
}

message DatasetProperties {
  uint32 schema_major_version = 1;
  uint32 schema_minor_version = 2;

  string session_id = 3;
  int64 session_timestamp = 4;
  int64 data_timestamp = 5;
  map<string, string> tags = 6;
  map<string, string> metadata = 7;
}

message DatasetProfileMessage {
  DatasetProperties properties = 1;
  map<string, ColumnMessage> columns = 2;
  map<string, TrackerMessage> metric_plugins = 3;
}

message CountMessage {
  int64 value = 1;
}
